// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertiesPagination Snapshots should match snapshot for first page 1`] = `
<div
  class="inline-flex"
>
  <div
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 pointer-events-none text-gray-300 mr-2 md:mr-4"
  >
    <div
      class="w-4"
      data-testid="arrow-left-icon"
    >
      ←
    </div>
  </div>
  <div
    class="flex -space-x-px"
  >
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-l-md z-10 bg-blue-700 text-white"
    >
      1
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=2"
    >
      2
    </a>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=3"
    >
      3
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 text-gray-300"
    >
      ...
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-r-md hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=10"
    >
      10
    </a>
  </div>
  <a
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 hover:bg-gray-100 ml-2 md:ml-4"
    data-testid="pagination-link"
    href="/properties?page=2"
  >
    <div
      class="w-4"
      data-testid="arrow-right-icon"
    >
      →
    </div>
  </a>
</div>
`;

exports[`PropertiesPagination Snapshots should match snapshot for last page 1`] = `
<div
  class="inline-flex"
>
  <a
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 hover:bg-gray-100 mr-2 md:mr-4"
    data-testid="pagination-link"
    href="/properties?page=9"
  >
    <div
      class="w-4"
      data-testid="arrow-left-icon"
    >
      ←
    </div>
  </a>
  <div
    class="flex -space-x-px"
  >
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-l-md hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=1"
    >
      1
    </a>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=2"
    >
      2
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 text-gray-300"
    >
      ...
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=8"
    >
      8
    </a>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=9"
    >
      9
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-r-md z-10 bg-blue-700 text-white"
    >
      10
    </div>
  </div>
  <div
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 pointer-events-none text-gray-300 ml-2 md:ml-4"
  >
    <div
      class="w-4"
      data-testid="arrow-right-icon"
    >
      →
    </div>
  </div>
</div>
`;

exports[`PropertiesPagination Snapshots should match snapshot for middle page 1`] = `
<div
  class="inline-flex"
>
  <a
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 hover:bg-gray-100 mr-2 md:mr-4"
    data-testid="pagination-link"
    href="/properties?page=4"
  >
    <div
      class="w-4"
      data-testid="arrow-left-icon"
    >
      ←
    </div>
  </a>
  <div
    class="flex -space-x-px"
  >
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-l-md hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=1"
    >
      1
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 text-gray-300"
    >
      ...
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=4"
    >
      4
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 z-10 bg-blue-700 text-white"
    >
      5
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=6"
    >
      6
    </a>
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 text-gray-300"
    >
      ...
    </div>
    <a
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-r-md hover:bg-gray-100"
      data-testid="pagination-link"
      href="/properties?page=10"
    >
      10
    </a>
  </div>
  <a
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 hover:bg-gray-100 ml-2 md:ml-4"
    data-testid="pagination-link"
    href="/properties?page=6"
  >
    <div
      class="w-4"
      data-testid="arrow-right-icon"
    >
      →
    </div>
  </a>
</div>
`;

exports[`PropertiesPagination Snapshots should match snapshot for single page 1`] = `
<div
  class="inline-flex"
>
  <div
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 pointer-events-none text-gray-300 mr-2 md:mr-4"
  >
    <div
      class="w-4"
      data-testid="arrow-left-icon"
    >
      ←
    </div>
  </div>
  <div
    class="flex -space-x-px"
  >
    <div
      class="flex h-10 w-10 items-center justify-center text-sm border border-gray-300 rounded-l-md rounded-r-md z-10 bg-blue-700 text-white"
    >
      1
    </div>
  </div>
  <div
    class="flex h-10 w-10 items-center justify-center rounded-md border border-gray-300 pointer-events-none text-gray-300 ml-2 md:ml-4"
  >
    <div
      class="w-4"
      data-testid="arrow-right-icon"
    >
      →
    </div>
  </div>
</div>
`;
